// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider renders as vertical 1`] = `
<DocumentFragment>
  .emotion-0 {
  border-style: solid;
  border-color: #e4e4e4;
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-left-width: 1px;
  display: inline-block;
  height: 100%;
}

<hr
    class="emotion-0"
    data-testid="divider"
  />
</DocumentFragment>
`;

exports[`Divider renders with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  border-style: solid;
  border-color: #e4e4e4;
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-top-width: 1px;
  width: 100%;
}

<hr
    class="emotion-0"
    data-testid="divider"
  />
</DocumentFragment>
`;
